[gd_scene load_steps=5 format=3 uid="uid://cdif8ximea3ed"]

[ext_resource type="Script" path="res://menus/jump_shop.gd" id="1_b42uh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5f0il"]
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rt4sc"]
border_width_left = 7
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_6gqiq"]
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
Window/styles/embedded_border = SubResource("StyleBoxFlat_5f0il")
Window/styles/embedded_unfocused_border = SubResource("StyleBoxFlat_rt4sc")

[node name="JumpShop" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 300
script = ExtResource("1_b42uh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DoubleButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
text = "Double Jump
5 coins"

[node name="TripleButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
theme = SubResource("Theme_6gqiq")
text = "Triple Jump
150 coins"

[node name="QuadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
text = "Quad Jump
500 coins"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/DoubleButton" to="." method="_on_double_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TripleButton" to="." method="_on_triple_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuadButton" to="." method="_on_quad_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
